# Agentic-Data-Cleaner

./: Dockerfile  README.md  __init__.py  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  ui.py
env/: __init__.py  actions.py  environment.py  reward.py
graders/: __init__.py  grader_easy.py  grader_hard.py  grader_medium.py
server/: Dockerfile  __init__.py  app.py  dataprep_environment.py
tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
